Update form styling on competition page

--- a/competition.html
+++ b/competition.html
@@ -48,28 +48,30 @@
             </p>
             <div>
                 <label for="name">Name:</label>
-                <input type="text" id="name" class="text-input" name="name" required>
+                <input type="text" id="name" class="text-input" name="Name" required>
             </div>
             <div>
                 <label for="email">Email Address:</label>
-                <input type="email" id="email" class="text-input" name="email_address" required>
+                <input type="email" id="email" class="text-input" name="Email-address" required>
             </div>
             <div>
                 <label for="phone-number">Phone Number:</label>
-                <input type="number" id="phone-number" class="text-input" name="phone_number" required>
+                <input type="text" id="phone-number" class="text-input" name="Phone-number" required>
             </div>
             <p id="question">What is the name of Santa's reindeer with a bright red nose?</p>
             <div class="radio-buttons">
-                <label for="margaret">Margaret</label>
-                <input id="margaret" type="radio" name="answer" value="margaret" required>
-                <label for="rudolph">Rudolph</label>
-                <input id="rudolph" type="radio" name="answer" value="rudolph">
+                <input id="olaf" type="radio" name="Answer" value="Olaf" required>
+                <label for="olaf">Olaf <br><br></label>
+                <input id="rudolph" type="radio" name="Answer" value="Rudolph">
+                <label for="rudolph">Rudolph <br><br></label>
+                <input id="spider-man" type="radio" name="Answer" value="Spider-man">
                 <label for="spider-man">Spider-man</label>
-                <input id="spider-man" type="radio" name="answer" value="rudolph">
             </div>
 
-            <label for="terms"> I agree to the terms and conditions </label>
-            <input type="checkbox" id="terms" name="terms-and-conditions" class="terms" value="terms-and-conditions" required>
+            <div class="terms">
+                <input type="checkbox" id="terms" name="Terms-and-conditions" value="True" required>
+                <label for="terms"> I agree to the terms and conditions </label>
+            </div>
             
             <input type="submit" class="enter-button" value="Enter Competition">
 
