--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Link to CSS stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+    <link rel="shortcut icon" href="#">
 
     <title>Castleisland Christmas Markets</title>
 </head>
