--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <section id="info-plus-pathway-section">
         <div id="info-div">
             <h1 class="info-div-headings">Castleisland Christmas Market</h1>
-            <h3 class="info-div-headings" id="dates">
+            <h2 class="info-div-headings" id="dates">
                 <i class="fa-regular fa-calendar-days"></i>
                 25/11/2022 - 23/12/2022 
-            </h3>
+            </h2>
             <h3 id="open-times">
                 <strong>Monday – Wednesday:</strong> 12 noon – 9pm <br>
                 <strong>Thursday – Saturday:</strong> 11am – 10pm  <br>
@@ -92,7 +92,7 @@
     </section>
     <section id="map-section">
         <h3 id="find-us">COME FIND US! <i id="pin" class="fa-solid fa-map-pin"></i></h3>
-        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2374.1297208304095!2d-9.462652939540142!3d52.23072317355207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48452e05ad0e3d9d%3A0x8dab350c29436b49!2sCastleisland%20Co%20Operative%20Livestock%20Mart!5e0!3m2!1sen!2sie!4v1666042696701!5m2!1sen!2sie" height="300"></iframe>
+        <iframe id="map" title="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2374.1297208304095!2d-9.462652939540142!3d52.23072317355207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48452e05ad0e3d9d%3A0x8dab350c29436b49!2sCastleisland%20Co%20Operative%20Livestock%20Mart!5e0!3m2!1sen!2sie!4v1666042696701!5m2!1sen!2sie" height="300"></iframe>
     </section>
     <footer>
         <div id="copyright-container">
