--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </footer>
 
     <!--Link to Font Awesome -->
-    <script src="https://kit.fontawesome.com/8b642d33d0.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/8b642d33d0.js" rel="preconnect" crossorigin="anonymous"></script>
 
     <!--Link to JS -->
     <script src="assets/js/script.js"></script>
