Update fonts on css stylesheet

--- a/festivities.html
+++ b/festivities.html
@@ -10,6 +10,7 @@
     <!--Link to CSS stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 
+     <!--Line of code from Stack Overflow thread in relation to favicon error-->
     <link rel="shortcut icon" href="#">
 
     <title>Castleisland Christmas Markets</title>
@@ -38,7 +39,7 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section class="festivities-grid">
         <div class="grid-container">
             <div class="grid grid-text" id="item-one">
                 <h3 class="grid-text-header">Visit Santa</h3>
