--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--Link to CSS stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!--Line of code from Stack Overflow thread in relation to favicon error-->
     <link rel="shortcut icon" href="#">
 
     <title>Castleisland Christmas Markets</title>
